lib/moment/parser.js
module.exports = (function() {
  "use strict";

  /*
   * Generated by PEG.js 0.9.0.
   *
   * http://pegjs.org/
   */

  function peg$subclass(child, parent) {
    function ctor() { this.constructor = child; }
    ctor.prototype = parent.prototype;
    child.prototype = new ctor();
  }

  function peg$SyntaxError(message, expected, found, location) {
    this.message  = message;
    this.expected = expected;
    this.found    = found;
    this.location = location;
    this.name     = "SyntaxError";

    if (typeof Error.captureStackTrace === "function") {
      Error.captureStackTrace(this, peg$SyntaxError);
    }
  }

  peg$subclass(peg$SyntaxError, Error);

  function peg$parse(input) {
    var options = arguments.length > 1 ? arguments[1] : {},
        parser  = this,

        peg$FAILED = {},

        peg$startRuleFunctions = { start: peg$parsestart },
        peg$startRuleFunction  = peg$parsestart,

        peg$c0 = { type: "any", description: "any character" },
        peg$c1 = { type: "other", description: "whitespace" },
        peg$c2 = /^[\t\x0B\f \xA0\uFEFF]/,
        peg$c3 = { type: "class", value: "[\\t\\v\\f \\u00A0\\uFEFF]", description: "[\\t\\v\\f \\u00A0\\uFEFF]" },
        peg$c4 = ".",
        peg$c5 = { type: "literal", value: ".", description: "\".\"" },
        peg$c6 = function(parts) {
               return parseFloat(parts);
           },
        peg$c7 = function(parts) { return parseFloat(parts); },
        peg$c8 = "0",
        peg$c9 = { type: "literal", value: "0", description: "\"0\"" },
        peg$c10 = /^[0-9]/,
        peg$c11 = { type: "class", value: "[0-9]", description: "[0-9]" },
        peg$c12 = /^[1-9]/,
        peg$c13 = { type: "class", value: "[1-9]", description: "[1-9]" },
        peg$c14 = /^[\-+]/,
        peg$c15 = { type: "class", value: "[-+]", description: "[-+]" },
        peg$c16 = function(s) {
                return {
                    type: "UnixTimeLiteral",
                    value: s
                }
            },
        peg$c17 = "Z",
        peg$c18 = { type: "literal", value: "Z", description: "\"Z\"" },
        peg$c19 = "+",
        peg$c20 = { type: "literal", value: "+", description: "\"+\"" },
        peg$c21 = "-",
        peg$c22 = { type: "literal", value: "-", description: "\"-\"" },
        peg$c23 = ":",
        peg$c24 = { type: "literal", value: ":", description: "\":\"" },
        peg$c25 = "T",
        peg$c26 = { type: "literal", value: "T", description: "\"T\"" },
        peg$c27 = function(d, t, z) {
                return {
                    type: "ISODateLiteral",
                    value: d + (t? t : "T00:00:00") + (z ? z: "")
                }
            },
        peg$c28 = "now",
        peg$c29 = { type: "literal", value: "now", description: "\"now\"" },
        peg$c30 = function() {
                return {
                    type: "NowLiteral"
                };
            },
        peg$c31 = "beginning",
        peg$c32 = { type: "literal", value: "beginning", description: "\"beginning\"" },
        peg$c33 = function() {
                return {
                    type: "BeginningLiteral"
                };
            },
        peg$c34 = "end",
        peg$c35 = { type: "literal", value: "end", description: "\"end\"" },
        peg$c36 = function() {
                return {
                    type: "EndLiteral"
                };
            },
        peg$c37 = "s",
        peg$c38 = { type: "literal", value: "s", description: "\"s\"" },
        peg$c39 = function(string) {
                return string;
            },
        peg$c40 = "millisecond",
        peg$c41 = { type: "literal", value: "millisecond", description: "\"millisecond\"" },
        peg$c42 = "second",
        peg$c43 = { type: "literal", value: "second", description: "\"second\"" },
        peg$c44 = "minute",
        peg$c45 = { type: "literal", value: "minute", description: "\"minute\"" },
        peg$c46 = "hour",
        peg$c47 = { type: "literal", value: "hour", description: "\"hour\"" },
        peg$c48 = "day",
        peg$c49 = { type: "literal", value: "day", description: "\"day\"" },
        peg$c50 = "week",
        peg$c51 = { type: "literal", value: "week", description: "\"week\"" },
        peg$c52 = "ms",
        peg$c53 = { type: "literal", value: "ms", description: "\"ms\"" },
        peg$c54 = "m",
        peg$c55 = { type: "literal", value: "m", description: "\"m\"" },
        peg$c56 = "h",
        peg$c57 = { type: "literal", value: "h", description: "\"h\"" },
        peg$c58 = "d",
        peg$c59 = { type: "literal", value: "d", description: "\"d\"" },
        peg$c60 = "w",
        peg$c61 = { type: "literal", value: "w", description: "\"w\"" },
        peg$c62 = "month",
        peg$c63 = { type: "literal", value: "month", description: "\"month\"" },
        peg$c64 = "year",
        peg$c65 = { type: "literal", value: "year", description: "\"year\"" },
        peg$c66 = "M",
        peg$c67 = { type: "literal", value: "M", description: "\"M\"" },
        peg$c68 = "y",
        peg$c69 = { type: "literal", value: "y", description: "\"y\"" },
        peg$c70 = function(num, unit) {
                return {
                    type: "MomentDuration",
                    value: (num === null) ? 1 : num,
                    unit: unit
                };
            },
        peg$c71 = function(num, unit) {
                num = (num === null) ? 1 : num;

                return {
                    type: "MomentDuration",
                    value: num,
                    unit: unit
                };
            },
        peg$c72 = "/",
        peg$c73 = { type: "literal", value: "/", description: "\"/\"" },
        peg$c74 = function() {
                return {
                    type: "MomentDuration",
                    value: text(),
                    unit: null
                };
            },
        peg$c75 = "first",
        peg$c76 = { type: "literal", value: "first", description: "\"first\"" },
        peg$c77 = "of",
        peg$c78 = { type: "literal", value: "of", description: "\"of\"" },
        peg$c79 = function(unit, expr) {
                return {
                    type: "CalendarExpression",
                    direction: "down",
                    unit: unit,
                    expression: expr
                };
            },
        peg$c80 = "final",
        peg$c81 = { type: "literal", value: "final", description: "\"final\"" },
        peg$c82 = function(unit, expr) {
                return {
                    type: "CalendarExpression",
                    direction: "down",
                    unit: unit,
                    expression: {
                        type: "CalendarExpression",
                        direction: "up",
                        unit: expr.unit,
                        expression: expr
                    }
                };
            },
        peg$c83 = function(ord, expr) {
                return {
                    type: "BinaryExpression",
                    operator: "+",
                    left: expr,
                    right: ord
                };
            },
        peg$c84 = "today",
        peg$c85 = { type: "literal", value: "today", description: "\"today\"" },
        peg$c86 = function() {
                return {
                    type: "TodayLiteral"
                };
            },
        peg$c87 = "yesterday",
        peg$c88 = { type: "literal", value: "yesterday", description: "\"yesterday\"" },
        peg$c89 = function() {
                return {
                    type: "YesterdayLiteral"
                };
            },
        peg$c90 = "tomorrow",
        peg$c91 = { type: "literal", value: "tomorrow", description: "\"tomorrow\"" },
        peg$c92 = function() {
                return {
                    type: "TomorrowLiteral"
                };
            },
        peg$c93 = "this",
        peg$c94 = { type: "literal", value: "this", description: "\"this\"" },
        peg$c95 = function(unit) {
                return {
                    type: "CalendarExpression",
                    direction: "down",
                    unit: unit,
                    expression: {
                        type: "NowLiteral"
                    }
                };
            },
        peg$c96 = "prior",
        peg$c97 = { type: "literal", value: "prior", description: "\"prior\"" },
        peg$c98 = "last",
        peg$c99 = { type: "literal", value: "last", description: "\"last\"" },
        peg$c100 = function(offset, unit) {
                var num = (offset === null) ? 1 : offset[0];

                return {
                    type: "CalendarExpression",
                    direction: "down",
                    unit: unit,
                    expression: {
                        type: "BinaryExpression",
                        operator: "-",
                        left: {
                            type: "NowLiteral"
                        },
                        right: {
                           type: "MomentDuration",
                           value: num,
                           unit: unit
                       }
                    }
                };
            },
        peg$c101 = "next",
        peg$c102 = { type: "literal", value: "next", description: "\"next\"" },
        peg$c103 = function(offset, unit) {
                var num = (offset === null) ? 1 : offset[0];

                return {
                    type: "CalendarExpression",
                    direction: "down",
                    unit: unit,
                    expression: {
                        type: "BinaryExpression",
                        operator: "+",
                        left: {
                            type: "NowLiteral"
                        },
                        right: {
                           type: "MomentDuration",
                           value: num,
                           unit: unit
                       }
                    }
                };
            },
        peg$c104 = function(unit, expr) {
                return {
                    type: "CalendarExpression",
                    direction: "down",
                    unit: unit,
                    expression: expr
                }
            },
        peg$c105 = function(unit, offset) {
                return {
                    type: "MomentDuration",
                    value: offset - 1,
                    unit: unit
                };
            },
        peg$c106 = "forever",
        peg$c107 = { type: "literal", value: "forever", description: "\"forever\"" },
        peg$c108 = function() {
                return {
                    type: "ForeverLiteral"
                };
            },
        peg$c109 = "and",
        peg$c110 = { type: "literal", value: "and", description: "\"and\"" },
        peg$c111 = function(left, right) {
                return {
                    type: "BinaryExpression",
                    operator: "+",
                    left: left,
                    right: right
                };
            },
        peg$c112 = function(durationExpression) {
                return {
                    type: "BinaryExpression",
                    operator: "-",
                    left: {
                        type: "NowLiteral"
                    },
                    right: durationExpression
                };
            },
        peg$c113 = function(durationExpression) {
                return {
                    type: "BinaryExpression",
                    operator: "+",
                    left: {
                        type: "NowLiteral"
                    },
                    right: durationExpression
                };
            },
        peg$c114 = "ago",
        peg$c115 = { type: "literal", value: "ago", description: "\"ago\"" },
        peg$c116 = "before",
        peg$c117 = { type: "literal", value: "before", description: "\"before\"" },
        peg$c118 = function(durationExpression, subExpression) {
                return {
                    type: "BinaryExpression",
                    operator: "-",
                    left: subExpression,
                    right: durationExpression
                };
            },
        peg$c119 = "after",
        peg$c120 = { type: "literal", value: "after", description: "\"after\"" },
        peg$c121 = "from",
        peg$c122 = { type: "literal", value: "from", description: "\"from\"" },
        peg$c123 = function(durationExpression, subExpression) {
                return {
                    type: "BinaryExpression",
                    operator: "+",
                    left: subExpression,
                    right: durationExpression
                };
            },

        peg$currPos          = 0,
        peg$savedPos         = 0,
        peg$posDetailsCache  = [{ line: 1, column: 1, seenCR: false }],
        peg$maxFailPos       = 0,
        peg$maxFailExpected  = [],
        peg$silentFails      = 0,

        peg$resultsCache = {},

        peg$result;

    if ("startRule" in options) {
      if (!(options.startRule in peg$startRuleFunctions)) {
        throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
      }

      peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
    }

    function text() {
      return input.substring(peg$savedPos, peg$currPos);
    }

    function location() {
      return peg$computeLocation(peg$savedPos, peg$currPos);
    }

    function expected(description) {
      throw peg$buildException(
        null,
        [{ type: "other", description: description }],
        input.substring(peg$savedPos, peg$currPos),
        peg$computeLocation(peg$savedPos, peg$currPos)
      );
    }

    function error(message) {
      throw peg$buildException(
        message,
        null,
        input.substring(peg$savedPos, peg$currPos),
        peg$computeLocation(peg$savedPos, peg$currPos)
      );
    }

    function peg$computePosDetails(pos) {
      var details = peg$posDetailsCache[pos],
          p, ch;

      if (details) {
        return details;
      } else {
        p = pos - 1;
        while (!peg$posDetailsCache[p]) {
          p--;
        }

        details = peg$posDetailsCache[p];
        details = {
          line:   details.line,
          column: details.column,
          seenCR: details.seenCR
        };

        while (p < pos) {
          ch = input.charAt(p);
          if (ch === "\n") {
            if (!details.seenCR) { details.line++; }
            details.column = 1;
            details.seenCR = false;
          } else if (ch === "\r" || ch === "\u2028" || ch === "\u2029") {
            details.line++;
            details.column = 1;
            details.seenCR = true;
          } else {
            details.column++;
            details.seenCR = false;
          }

          p++;
        }

        peg$posDetailsCache[pos] = details;
        return details;
      }
    }

    function peg$computeLocation(startPos, endPos) {
      var startPosDetails = peg$computePosDetails(startPos),
          endPosDetails   = peg$computePosDetails(endPos);

      return {
        start: {
          offset: startPos,
          line:   startPosDetails.line,
          column: startPosDetails.column
        },
        end: {
          offset: endPos,
          line:   endPosDetails.line,
          column: endPosDetails.column
        }
      };
    }

    function peg$fail(expected) {
      if (peg$currPos < peg$maxFailPos) { return; }

      if (peg$currPos > peg$maxFailPos) {
        peg$maxFailPos = peg$currPos;
        peg$maxFailExpected = [];
      }

      peg$maxFailExpected.push(expected);
    }

    function peg$buildException(message, expected, found, location) {
      function cleanupExpected(expected) {
        var i = 1;

        expected.sort(function(a, b) {
          if (a.description < b.description) {
            return -1;
          } else if (a.description > b.description) {
            return 1;
          } else {
            return 0;
          }
        });

        while (i < expected.length) {
          if (expected[i - 1] === expected[i]) {
            expected.splice(i, 1);
          } else {
            i++;
          }
        }
      }

      function buildMessage(expected, found) {
        function stringEscape(s) {
          function hex(ch) { return ch.charCodeAt(0).toString(16).toUpperCase(); }

          return s
            .replace(/\\/g,   '\\\\')
            .replace(/"/g,    '\\"')
            .replace(/\x08/g, '\\b')
            .replace(/\t/g,   '\\t')
            .replace(/\n/g,   '\\n')
            .replace(/\f/g,   '\\f')
            .replace(/\r/g,   '\\r')
            .replace(/[\x00-\x07\x0B\x0E\x0F]/g, function(ch) { return '\\x0' + hex(ch); })
            .replace(/[\x10-\x1F\x80-\xFF]/g,    function(ch) { return '\\x'  + hex(ch); })
            .replace(/[\u0100-\u0FFF]/g,         function(ch) { return '\\u0' + hex(ch); })
            .replace(/[\u1000-\uFFFF]/g,         function(ch) { return '\\u'  + hex(ch); });
        }

        var expectedDescs = new Array(expected.length),
            expectedDesc, foundDesc, i;

        for (i = 0; i < expected.length; i++) {
          expectedDescs[i] = expected[i].description;
        }

        expectedDesc = expected.length > 1
          ? expectedDescs.slice(0, -1).join(", ")
              + " or "
              + expectedDescs[expected.length - 1]
          : expectedDescs[0];

        foundDesc = found ? "\"" + stringEscape(found) + "\"" : "end of input";

        return "Expected " + expectedDesc + " but " + foundDesc + " found.";
      }

      if (expected !== null) {
        cleanupExpected(expected);
      }

      return new peg$SyntaxError(
        message !== null ? message : buildMessage(expected, found),
        expected,
        found,
        location
      );
    }

    function peg$parsestart() {
      var s0;

      var key    = peg$currPos * 38 + 0,
          cached = peg$resultsCache[key];

      if (cached) {
        peg$currPos = cached.nextPos;

        return cached.result;
      }

      s0 = peg$parseMomentValue();

      peg$resultsCache[key] = { nextPos: peg$currPos, result: s0 };

      return s0;
    }

    function peg$parseSourceCharacter() {
      var s0;

      var key    = peg$currPos * 38 + 1,
          cached = peg$resultsCache[key];

      if (cached) {
        peg$currPos = cached.nextPos;

        return cached.result;
      }

      if (input.length > peg$currPos) {
        s0 = input.charAt(peg$currPos);
        peg$currPos++;
      } else {
        s0 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c0); }
      }

      peg$resultsCache[key] = { nextPos: peg$currPos, result: s0 };

      return s0;
    }

    function peg$parse_() {
      var s0, s1;

      var key    = peg$currPos * 38 + 2,
          cached = peg$resultsCache[key];

      if (cached) {
        peg$currPos = cached.nextPos;

        return cached.result;
      }

      s0 = [];
      s1 = peg$parseWhiteSpace();
      while (s1 !== peg$FAILED) {
        s0.push(s1);
        s1 = peg$parseWhiteSpace();
      }

      peg$resultsCache[key] = { nextPos: peg$currPos, result: s0 };

      return s0;
    }

    function peg$parseWhiteSpace() {
      var s0, s1;

      var key    = peg$currPos * 38 + 3,
          cached = peg$resultsCache[key];

      if (cached) {
        peg$currPos = cached.nextPos;

        return cached.result;
      }

      peg$silentFails++;
      if (peg$c2.test(input.charAt(peg$currPos))) {
        s0 = input.charAt(peg$currPos);
        peg$currPos++;
      } else {
        s0 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c3); }
      }
      peg$silentFails--;
      if (s0 === peg$FAILED) {
        s1 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c1); }
      }

      peg$resultsCache[key] = { nextPos: peg$currPos, result: s0 };

      return s0;
    }

    function peg$parseDecimalLiteral() {
      var s0, s1, s2, s3, s4, s5;

      var key    = peg$currPos * 38 + 4,
          cached = peg$resultsCache[key];

      if (cached) {
        peg$currPos = cached.nextPos;

        return cached.result;
      }

      s0 = peg$currPos;
      s1 = peg$currPos;
      s2 = peg$currPos;
      s3 = peg$parseDecimalIntegerLiteral();
      if (s3 !== peg$FAILED) {
        if (input.charCodeAt(peg$currPos) === 46) {
          s4 = peg$c4;
          peg$currPos++;
        } else {
          s4 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$c5); }
        }
        if (s4 !== peg$FAILED) {
          s5 = peg$parseDecimalDigits();
          if (s5 === peg$FAILED) {
            s5 = null;
          }
          if (s5 !== peg$FAILED) {
            s3 = [s3, s4, s5];
            s2 = s3;
          } else {
            peg$currPos = s2;
            s2 = peg$FAILED;
          }
        } else {
          peg$currPos = s2;
          s2 = peg$FAILED;
        }
      } else {
        peg$currPos = s2;
        s2 = peg$FAILED;
      }
      if (s2 !== peg$FAILED) {
        s1 = input.substring(s1, peg$currPos);
      } else {
        s1 = s2;
      }
      if (s1 !== peg$FAILED) {
        peg$savedPos = s0;
        s1 = peg$c6(s1);
      }
      s0 = s1;
      if (s0 === peg$FAILED) {
        s0 = peg$currPos;
        s1 = peg$currPos;
        s2 = peg$currPos;
        if (input.charCodeAt(peg$currPos) === 46) {
          s3 = peg$c4;
          peg$currPos++;
        } else {
          s3 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$c5); }
        }
        if (s3 !== peg$FAILED) {
          s4 = peg$parseDecimalDigits();
          if (s4 !== peg$FAILED) {
            s3 = [s3, s4];
            s2 = s3;
          } else {
            peg$currPos = s2;
            s2 = peg$FAILED;
          }
        } else {
          peg$currPos = s2;
          s2 = peg$FAILED;
        }
        if (s2 !== peg$FAILED) {
          s1 = input.substring(s1, peg$currPos);
        } else {
          s1 = s2;
        }
        if (s1 !== peg$FAILED) {
          peg$savedPos = s0;
          s1 = peg$c7(s1);
        }
        s0 = s1;
        if (s0 === peg$FAILED) {
          s0 = peg$currPos;
          s1 = peg$currPos;
          s2 = peg$parseDecimalIntegerLiteral();
          if (s2 !== peg$FAILED) {
            s1 = input.substring(s1, peg$currPos);
          } else {
            s1 = s2;
          }
          if (s1 !== peg$FAILED) {
            peg$savedPos = s0;
            s1 = peg$c7(s1);
          }
          s0 = s1;
        }
      }

      peg$resultsCache[key] = { nextPos: peg$currPos, result: s0 };

      return s0;
    }

    function peg$parseDecimalIntegerLiteral() {
      var s0, s1, s2;

      var key    = peg$currPos * 38 + 5,
          cached = peg$resultsCache[key];

      if (cached) {
        peg$currPos = cached.nextPos;

        return cached.result;
      }

      if (input.charCodeAt(peg$currPos) === 48) {
        s0 = peg$c8;
        peg$currPos++;
      } else {
        s0 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c9); }
      }
      if (s0 === peg$FAILED) {
        s0 = peg$currPos;
        s1 = peg$parseNonZeroDigit();
        if (s1 !== peg$FAILED) {
          s2 = peg$parseDecimalDigits();
          if (s2 === peg$FAILED) {
            s2 = null;
          }
          if (s2 !== peg$FAILED) {
            s1 = [s1, s2];
            s0 = s1;
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      }

      peg$resultsCache[key] = { nextPos: peg$currPos, result: s0 };

      return s0;
    }

    function peg$parseInteger() {
      var s0, s1;

      var key    = peg$currPos * 38 + 6,
          cached = peg$resultsCache[key];

      if (cached) {
        peg$currPos = cached.nextPos;

        return cached.result;
      }

      s0 = peg$currPos;
      s1 = peg$parseDecimalDigits();
      if (s1 !== peg$FAILED) {
        s0 = input.substring(s0, peg$currPos);
      } else {
        s0 = s1;
      }

      peg$resultsCache[key] = { nextPos: peg$currPos, result: s0 };

      return s0;
    }

    function peg$parseInteger2() {
      var s0, s1, s2, s3;

      var key    = peg$currPos * 38 + 7,
          cached = peg$resultsCache[key];

      if (cached) {
        peg$currPos = cached.nextPos;

        return cached.result;
      }

      s0 = peg$currPos;
      s1 = peg$currPos;
      s2 = peg$parseDecimalDigit();
      if (s2 !== peg$FAILED) {
        s3 = peg$parseDecimalDigit();
        if (s3 !== peg$FAILED) {
          s2 = [s2, s3];
          s1 = s2;
        } else {
          peg$currPos = s1;
          s1 = peg$FAILED;
        }
      } else {
        peg$currPos = s1;
        s1 = peg$FAILED;
      }
      if (s1 !== peg$FAILED) {
        s0 = input.substring(s0, peg$currPos);
      } else {
        s0 = s1;
      }

      peg$resultsCache[key] = { nextPos: peg$currPos, result: s0 };

      return s0;
    }

    function peg$parseInteger4() {
      var s0, s1, s2, s3, s4, s5;

      var key    = peg$currPos * 38 + 8,
          cached = peg$resultsCache[key];

      if (cached) {
        peg$currPos = cached.nextPos;

        return cached.result;
      }

      s0 = peg$currPos;
      s1 = peg$currPos;
      s2 = peg$parseDecimalDigit();
      if (s2 !== peg$FAILED) {
        s3 = peg$parseDecimalDigit();
        if (s3 !== peg$FAILED) {
          s4 = peg$parseDecimalDigit();
          if (s4 !== peg$FAILED) {
            s5 = peg$parseDecimalDigit();
            if (s5 !== peg$FAILED) {
              s2 = [s2, s3, s4, s5];
              s1 = s2;
            } else {
              peg$currPos = s1;
              s1 = peg$FAILED;
            }
          } else {
            peg$currPos = s1;
            s1 = peg$FAILED;
          }
        } else {
          peg$currPos = s1;
          s1 = peg$FAILED;
        }
      } else {
        peg$currPos = s1;
        s1 = peg$FAILED;
      }
      if (s1 !== peg$FAILED) {
        s0 = input.substring(s0, peg$currPos);
      } else {
        s0 = s1;
      }

      peg$resultsCache[key] = { nextPos: peg$currPos, result: s0 };

      return s0;
    }

    function peg$parseDecimalDigits() {
      var s0, s1;

      var key    = peg$currPos * 38 + 9,
          cached = peg$resultsCache[key];

      if (cached) {
        peg$currPos = cached.nextPos;

        return cached.result;
      }

      s0 = [];
      s1 = peg$parseDecimalDigit();
      if (s1 !== peg$FAILED) {
        while (s1 !== peg$FAILED) {
          s0.push(s1);
          s1 = peg$parseDecimalDigit();
        }
      } else {
        s0 = peg$FAILED;
      }

      peg$resultsCache[key] = { nextPos: peg$currPos, result: s0 };

      return s0;
    }

    function peg$parseDecimalDigit() {
      var s0;

      var key    = peg$currPos * 38 + 10,
          cached = peg$resultsCache[key];

      if (cached) {
        peg$currPos = cached.nextPos;

        return cached.result;
      }

      if (peg$c10.test(input.charAt(peg$currPos))) {
        s0 = input.charAt(peg$currPos);
        peg$currPos++;
      } else {
        s0 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c11); }
      }

      peg$resultsCache[key] = { nextPos: peg$currPos, result: s0 };

      return s0;
    }

    function peg$parseNonZeroDigit() {
      var s0;

      var key    = peg$currPos * 38 + 11,
          cached = peg$resultsCache[key];

      if (cached) {
        peg$currPos = cached.nextPos;

        return cached.result;
      }

      if (peg$c12.test(input.charAt(peg$currPos))) {
        s0 = input.charAt(peg$currPos);
        peg$currPos++;
      } else {
        s0 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c13); }
      }

      peg$resultsCache[key] = { nextPos: peg$currPos, result: s0 };

      return s0;
    }

    function peg$parseSignedInteger() {
      var s0, s1, s2;

      var key    = peg$currPos * 38 + 12,
          cached = peg$resultsCache[key];

      if (cached) {
        peg$currPos = cached.nextPos;

        return cached.result;
      }
